simple-parent/simple-news/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-news-web
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-news-web
  template:
    metadata:
      labels:
        app: simple-news-web
    spec:
      containers:
        - name: simple-news-web
          image: simple-news:v1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir: {}
      restartPolicy: Always
