simple-parent/simple-news/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: app
  name: ngx
spec:
  volumes:
    - name: html
      emptyDir: {}
    - name: nginx-config
      configMap:
        name: nginx-config
  containers:
    - name: 1st
      image: nginx:latest
      ports:
        - containerPort: 80
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
    - name: 2nd
      image: debian
      volumeMounts:
        - name: html
          mountPath: /html
      command: ["/bin/sh", "-c"]
      args:
        - while true; do
            date >> /html/index.html;
            sleep 5;
          done

#kubectl exec ngx -c 1st -n app -- /bin/cat /usr/share/nginx/html/index.html
#kubectl exec ngx -c 2nd -n app -- /bin/cat /html/index.html
#kubectl exec -it ngx -n app -c 1st -- bash
#kubectl exec -it ngx -n app -c 1st -- sh

---

apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: ngxsvc
  labels:
    app: ngx
spec:
  ports:
    - port: 80 # between containers for service call for K8s
      targetPort: 80 # container port
      nodePort: 30080 # by default >30000 for external call
  type: NodePort
  selector:
    app: ngx
